workflow/.snakemake/log/2025-12-31T095547.934396.snakemake.log
Full Traceback (most recent call last):
  File "/home/mhu/miniconda3/envs/snake310/lib/python3.10/site-packages/snakemake/__init__.py", line 671, in snakemake
    workflow.include(
  File "/home/mhu/miniconda3/envs/snake310/lib/python3.10/site-packages/snakemake/workflow.py", line 1389, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/gpfs/work2/0/prjs1616/gatk_paper_demo/script/Snakefile_original.smk", line 542
    				mills = config [ "reference" ] [ "mills_indels" ]
    				        ^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

SyntaxError in file /gpfs/work2/0/prjs1616/gatk_paper_demo/script/Snakefile_original.smk, line 269:
invalid syntax. Perhaps you forgot a comma?
